--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mime": "^3.0.0"
+    "mime": "^3.0.0",
+    "mysql": "^2.18.1"
   }
 }
