--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,22 @@
-version: '3.1'
-
-services:
-  mysql-db:
-    image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: ImigrantesDados
-      MYSQL_USER: user
-      MYSQL_PASSWORD: 4321
+version: "3"
+services: 
+  mysql_knex:
+    container_name: BancoDoProjeto
+    hostname: BancoDoProjeto
+    image: mysql
+    restart: always
+    command:
+      - --default-authentication-plugin=mysql_native_password
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --innodb_force_recovery=0
+    volumes: 
+      - C:\Users\Paolo Klahold\Desktop\Faculdade\BaseDeDados:/var/lib/mysql
     ports:
-      - "3306"
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: senha
+      MYSQL_DATABASE: base_de_dados
+      MYSQL_USER: usuario
+      MYSQL_PASSWORD: senha
+      TZ: America/Sao_Paulo
