--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3"
+
 services: 
   mysql_knex:
     container_name: BancoDoProjeto
@@ -20,3 +21,24 @@ services:
       MYSQL_USER: usuario
       MYSQL_PASSWORD: senha
       TZ: America/Sao_Paulo
+    networks:
+      - minha_rede
+
+  apache_php:
+    container_name: MeuProjetoWeb
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./seu_codigo:/var/www/html
+    depends_on:
+      - mysql_knex
+    networks:
+      - minha_rede
+
+networks:
+  minha_rede:
+    driver: bridge
